patches/new-colon-uninit
Bottom: db0a3717ff63dbdf1e364dc0af53d4dce8c7e616
Top:    49f178c13081b7fcfa54a4a553792f96d3096a64
Author: scott snyder <sss@karma>
Date:   2021-12-16 12:39:42 -0500

We get a false positive uninitialized variable warning from this source:

struct DbObjectGuard   {
  DbObjectGuard();
};

void allocate(char* ptr)
{
  DbObjectGuard* g = ::new(ptr) DbObjectGuard();
}


$ cppcheck x.cc
Checking x.cc ...
x.cc:7:18: error: Uninitialized variable: g [legacyUninitvar]
  DbObjectGuard* g = ::new(ptr) DbObjectGuard();
                 ^

The warning goes away if the `::' before the new is removed.

Try to fix by extending matching to recognize this case.
